# ocaml-template

./: .gitignore  dune-project  init.sh  project.opam
lib/: dune  project.ml
